<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.dancres</groupId>
  <artifactId>paxos</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>paxos</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <logTests>true</logTests>
  </properties>
  
  <repositories>
	<repository>
	      <id>Spark repository</id>
	      <url>http://www.sparkjava.com/nexus/content/repositories/spark/</url>
	</repository>
  </repositories>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.5</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.7.5</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.3</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-all</artifactId>
            <version>4.1.19.Final</version>
        </dependency>
        <dependency>
            <groupId>org.objectweb.howl</groupId>
            <artifactId>howl</artifactId>
            <version>1.0.1-1</version>
        </dependency>
        <dependency>
            <groupId>com.lexicalscope.jewelcli</groupId>
            <artifactId>jewelcli</artifactId>
            <version>0.8.3</version>
        </dependency>
        <dependency>
            <groupId>spark</groupId>
            <artifactId>spark</artifactId>
            <version>0.9.9.3-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>log4j</groupId>
                    <artifactId>log4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.9</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


  <profiles>
    <profile>
      <id>profile-1</id>
      <activation>
        <property>
          <name>calibrate</name>
        </property>
      </activation>
      <build>
        <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.2.1</version>
          <configuration>
            <executable>java</executable>
            <classpathScope>test</classpathScope>            
            <arguments>
              <argument>-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties</argument>
              <argument>-classpath</argument>
              <classpath />
              <argument>
                org.dancres.paxos.test.longterm.Main
              </argument>
              <argument>
                --calibrate
              </argument>
              <argument>
                --memory
              </argument>
              <argument>
                --cycles=100000
              </argument>
            </arguments>
          </configuration>
        </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>profile-2</id>
      <activation>
        <property>
          <name>longterm</name>
        </property>
      </activation>
      <build>
        <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>1.2.1</version>
          <configuration>
            <executable>java</executable>
            <classpathScope>test</classpathScope>            
            <arguments>
              <argument>-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties</argument>
              <argument>-classpath</argument>
              <classpath />
              <argument>
                  org.dancres.paxos.test.longterm.Main
              </argument>
              <argument>
                --iterations=10
              </argument>
            </arguments>
          </configuration>
        </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

    <build>
        <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.1</version>
              <configuration>
                  <compilerArgument>-Xlint:deprecation,unchecked</compilerArgument>
                  <source>9</source>
                  <target>9</target>
              </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.14.1</version>
                <configuration>
                    <argLine>-Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties</argLine>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <redirectTestOutputToFile>${logTests}</redirectTestOutputToFile>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
    
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <show>private</show>
                    <nohelp>true</nohelp>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
